--- a/src/app/emp-add-edit/emp-add-edit.html
+++ b/src/app/emp-add-edit/emp-add-edit.html
@@ -68,6 +68,8 @@
   </div>
   <div mat-dialog-actions class="action">
     <button mat-raised-button type="submit">Confirm</button>
-    <button mat-raised-button color="primary">Cancel</button>
+    <button mat-raised-button color="primary" type="button" [mat-dialog-close]="false">
+      Cancel
+    </button>
   </div>
 </form>
